Implementation de la map

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,13 +21,16 @@ constraintlayout = "2.1.4"
 mediarouter = "1.6.0"
 osmdroidAndroid = "6.0.0"
 picasso = "2.71828"
+preferenceKtxVersion = "1.1.1"
 recyclerview = "1.3.2"
 firebaseFirestore = "24.11.0"
 recyclerviewVersion = "1.2.1"
+preferenceKtx = "1.2.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-databinding-runtime = { module = "androidx.databinding:databinding-runtime", version.ref = "databindingRuntime" }
+androidx-preference-ktx-v111 = { module = "androidx.preference:preference-ktx", version.ref = "preferenceKtxVersion" }
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
 androidx-recyclerview-v121 = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerviewVersion" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics", version.ref = "firebaseAnalytics" }
@@ -49,6 +52,7 @@ androidx-mediarouter = { group = "androidx.mediarouter", name = "mediarouter", v
 osmdroid-android = { module = "org.osmdroid:osmdroid-android", version.ref = "osmdroidAndroid" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
 picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
+androidx-preference-ktx = { group = "androidx.preference", name = "preference-ktx", version.ref = "preferenceKtx" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
